// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<span
  className="ant-avatar {\\"style\\":[{\\"backgroundColor\\":\\"#7fffff\\"},null]} ant-avatar-circle"
  id="default"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.color 1`] = `
<span
  className="ant-avatar {\\"style\\":[{\\"backgroundColor\\":\\"#f12345\\"},null]} ant-avatar-circle"
  id="properties.color"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.color 1`] = `true`;

exports[`Test Schema properties.color 2`] = `null`;
